// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow should accept alignItems prop 1`] = `
.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.5rem;
  margin-bottom: 0rem;
  margin-left: 0.5rem;
  display: inline-block;
}

.emotion-3 {
  margin: 0 -0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <div>
      1
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div>
      2
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div>
      3
    </div>
  </div>
</div>
`;

exports[`Flow should accept direction prop 1`] = `
.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.5rem;
  margin-bottom: 0rem;
  margin-left: 0.5rem;
  display: inline-block;
}

.emotion-3 {
  margin: 0 -0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <div>
      1
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div>
      2
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div>
      3
    </div>
  </div>
</div>
`;

exports[`Flow should accept hSpacing prop 1`] = `
.emotion-3 {
  margin: 0 -0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.25rem;
  margin-bottom: 0rem;
  margin-left: 0.25rem;
  display: inline-block;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`Flow should accept justifyContent prop 1`] = `
.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.5rem;
  margin-bottom: 0rem;
  margin-left: 0.5rem;
  display: inline-block;
}

.emotion-3 {
  margin: 0 -0.5rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <div>
      1
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div>
      2
    </div>
  </div>
  <div
    class="emotion-0"
  >
    <div>
      3
    </div>
  </div>
</div>
`;

exports[`Flow should accept vSpacing prop 1`] = `
.emotion-3 {
  margin: 0 -0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  margin-top: 1.25rem;
  margin-right: 0.5rem;
  margin-bottom: 1.25rem;
  margin-left: 0.5rem;
  display: inline-block;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;

exports[`Flow should wrap each child on an element with horizontal spacing 1`] = `
.emotion-3 {
  margin: 0 -0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0 {
  margin-top: 0rem;
  margin-right: 0.5rem;
  margin-bottom: 0rem;
  margin-left: 0.5rem;
  display: inline-block;
}

<div
  class="emotion-3"
>
  <div
    class="emotion-0"
  >
    <span>
      1
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      2
    </span>
  </div>
  <div
    class="emotion-0"
  >
    <span>
      3
    </span>
  </div>
</div>
`;
